--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "moment": "^2.29.1",
-    "@angular-devkit/build-angular": "~0.1102.11",
+    "@angular-devkit/build-angular": "^0.1102.14",
     "@angular/cli": "~11.2.11",
     "@angular/compiler-cli": "~11.2.12",
     "@types/jasmine": "~3.6.0",
@@ -41,6 +40,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "moment": "^2.29.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
